@@ -1,3 +1,3 @@
 ﻿
-use database Northwind
+open database Northwind
 
