@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{75870656-39C6-4578-8827-152B9D472F9D}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -51,7 +51,7 @@
     <Compile Include="Commands\ExpressionCommand.cs" />
     <Compile Include="Commands\ReturnCommand.cs" />
     <Compile Include="Commands\UseWorkAreaCommand.cs" />
-    <Compile Include="Commands\UseDatabaseCommand.cs" />
+    <Compile Include="Commands\OpenDatabaseCommand.cs" />
     <Compile Include="Commands\PrivateCommand.cs" />
     <Compile Include="Commands\LocalCommand.cs" />
     <Compile Include="Commands\PublicCommand.cs" />
